# Talorik-Agent

./: README.md
TalorikAgent/: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  TalorikAgent.sln  build_simple.cpp  compile.ps1  compile_simple.bat  compile_vs.bat  run_compile.ps1.bat  vcpkg.json
TalorikAgent/TalorikAgent/: TalorikAgent.cpp  TalorikAgent.vcxproj
TalorikAgent/docs/: SECURITY_AGENT_API.md
TalorikAgent/docs/api/: README.md
TalorikAgent/examples/: basic_agent.cpp
TalorikAgent/include/agents/: Agent.h  SecurityAgent.h
TalorikAgent/include/config/: ConfigManager.h
TalorikAgent/include/controllers/: AgentController.h  TaskController.h
TalorikAgent/include/core/: AgentSystem.h
TalorikAgent/include/models/: Message.h  SecurityModels.h  Task.h
TalorikAgent/include/network/: HttpServer.h
TalorikAgent/include/services/: AgentService.h  TaskService.h
TalorikAgent/include/utils/: Logger.h  SimpleJson.h
TalorikAgent/resources/config/: agent_config.json
TalorikAgent/scripts/: build.bat  build.sh  build_available.bat  build_clean.bat  build_full.bat  build_minimal.bat  build_no_vcpkg.bat  build_simple.bat  build_windows.bat  check_packages.bat  fix_vcpkg.bat  install_nlohmann.bat  install_vcpkg.bat  test_api.py
TalorikAgent/src/: main.cpp  main_simple.cpp
TalorikAgent/src/agents/: Agent.cpp  CMakeLists.txt  SecurityAgent.cpp
TalorikAgent/src/config/: CMakeLists.txt  ConfigManager.cpp
TalorikAgent/src/controllers/: AgentController.cpp  CMakeLists.txt  TaskController.cpp
TalorikAgent/src/core/: CMakeLists.txt
TalorikAgent/src/models/: CMakeLists.txt  Message.cpp  SecurityModels.cpp  Task.cpp
TalorikAgent/src/network/: CMakeLists.txt  HttpServer.cpp
TalorikAgent/src/services/: AgentService.cpp  CMakeLists.txt  TaskService.cpp
TalorikAgent/src/utils/: CMakeLists.txt  Logger.cpp  SimpleJson.cpp
TalorikAgent/tests/: CMakeLists.txt
